--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 </head>
 
 <body >
-  
+
   <div id="sidebar" class="container-fluid">
     <div class="well well-sm">
       <%= render 'sidebar' %>
@@ -22,10 +22,10 @@
 
   <footer class="footer">
     <div class="container-fluid">
-      <p>(c) 2014 LOCODI | 
-        <small>
+      <p>(c) 2014 LOCODI |
+        <span id="created_by">
           Created by <%= link_to "Chiperific", "http://chiperific.com", target: :blank %>
-        </small>
+        </span>
       </p>
     </div>
   </footer>
