--- a/app/views/pages/_sidebar.html.erb
+++ b/app/views/pages/_sidebar.html.erb
@@ -9,7 +9,9 @@
     <li id="work" >
       <%= icon('fire') %> Our Work
     </li>
-    <li id="leaders" class="sub-menu"> <%= icon('gavel') %> Leaders</li>
+    <li id="leaders" class="sub-menu">
+      <%= icon('gavel') %> Leaders
+    </li>
     <li id="history" >
       <%= icon('history') %> Our History
     </li>
