--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-
+<div class="background-image">
+  <%= image_tag('car_desert.jpeg') %>
+</div>
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
