--- a/app/views/pages/_sidebar.html.erb
+++ b/app/views/pages/_sidebar.html.erb
@@ -18,6 +18,9 @@
     <li id="support" >
       <%= icon('group') %> Support Us
     </li>
+    <li id="calendar">
+      <%= icon('calendar') %> Events
+    </li>
     <li id="social" >
       <%= icon('share-alt') %> Social
     </li>
