--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<div class="background-image">
-  <%= image_tag('car_desert.jpeg') %>
+<div class="supersized">
+  <%= image_tag 'car_desert.jpeg', class: "supersized-image" %>
 </div>
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
