--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// Center the Content titles
+div.content-block > div > h3 {
+  text-align: center;
+}
+
+// Center the Story titles
+div.story-head {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
