--- a/app/views/pages/_sidebar.html.erb
+++ b/app/views/pages/_sidebar.html.erb
@@ -1,22 +1,23 @@
-<span id="sidebar_page_finder" class="hidden">
-  <%= @page_finder %>
-</span>
-<nav>
+<div id="sidebar-wrapper">
+  <span id="sidebar_page_finder" class="hidden">
+    <%= @page_finder %>
+  </span>
+
   <ul id="sidebar_ul">
     <li id="home">
       <%= icon('home') %> Home
     </li>
     <li id="work" >
-      <%= icon('fire') %> Our Work
+      <%= icon('fire') %> Work
     </li>
     <li id="leaders" class="sub-menu">
-      <%= icon('gavel') %> Leaders
+      <%= icon('gavel') %> Board
     </li>
     <li id="history" >
-      <%= icon('history') %> Our History
+      <%= icon('history') %> History
     </li>
     <li id="support" >
-      <%= icon('group') %> Support Us
+      <%= icon('group') %> Support
     </li>
     <li id="calendar">
       <%= icon('calendar') %> Events
@@ -25,4 +26,7 @@
       <%= icon('share-alt') %> Social
     </li>
   </ul>
-</nav>
+</div>
+
+
+
