--- a/app/views/layouts/page-template.html.erb
+++ b/app/views/layouts/page-template.html.erb
@@ -1,5 +1,11 @@
 <div class="supersized">
-  <%= image_tag 'car_desert.jpeg', class: "supersized-image" %>
+  The image tag goes here for pages with a background image. Otherwise, remove div
+</div>
+
+<div class="title-block row">
+  <div class="col-xs-12">
+    <h1 class="dark text-center">Page Title</h1>
+  </div>
 </div>
 
 <div class="content-block row">
