--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,7 @@
 <body >
   <div class="banner-title row">
     <div class="col-xs-12">
-      <h1 class="dark text-center">LOCODI</h1>
-      <p class="text-center">The tagline of the century</p>
+      <%= render 'banner_title' %>
     </div>
   </div>
 
