--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,8 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+// Set a min-height for Content blocks
+div.content-block div.well {
+  min-height: 10em;
+  height: 100%;
+  background-color: rgba(255,255,255,0.26);
+  border-radius: 12px;
+  border: none;
+  padding: 1em;
+}
+
 // Center the Content titles
-div.content-block > div > h3 {
+h3 {
   text-align: center;
 }
 
