--- a/app/views/layouts/page-template.html.erb
+++ b/app/views/layouts/page-template.html.erb
@@ -10,43 +10,56 @@
 
 <div class="content-block row">
   <div class="col-sm-6">
-    <h3>Content Title</h3>
+    <div class="well">
+      <h3>Content Title</h3>
+      <p></p>
+    </div>
   </div>
 
   <div class="col-sm-6">
-    <h3>Content Title</h3>
+    <div class="well">
+      <h3>Content Title</h3>
+      <p></p>
+    </div>
   </div>
   
   <div class="col-sm-4">
-    <div class="row">
-      <div class="col-xs-12 story-head">
-        Story image or title
+    <div class="well">
+      <div class="row">
+        <div class="col-xs-12 story-head">
+          Story image or title
+        </div>
+        <div class="col-xs-12">
+          Story content
+        </div>
       </div>
-      <div class="col-xs-12">
-        Story content
-      </div>
-    </div>
+    </div> 
   </div>
 
   <div class="col-sm-4">
-    <div class="row">
-      <div class="col-xs-12 story-head">
-        Story image or title
+    <div class="well">
+      <div class="row">
+        <div class="col-xs-12 story-head">
+          Story image or title
+        </div>
+        <div class="col-xs-12">
+          Story content
+        </div>
       </div>
-      <div class="col-xs-12">
-        Story content
-      </div>
-    </div>
+    </div> 
   </div>
 
   <div class="col-sm-4">
-    <div class="row">
-      <div class="col-xs-12 story-head">
-        Story image or title
+    <div class="well">
+      <div class="row">
+        <div class="col-xs-12 story-head">
+          Story image or title
+        </div>
+        <div class="col-xs-12">
+          Story content
+        </div>
       </div>
-      <div class="col-xs-12">
-        Story content
-      </div>
-    </div>
+    </div> 
   </div>
+  
 </div>
