--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,43 +4,67 @@
 
 <div class="content-block row">
   <div class="col-sm-6">
-    <h3>Content Title</h3>
+    <div class="well">
+      <h3>Content Title</h3>
+      <p>
+        <%= lorem_ipsum(250) %>
+      </p>
+    </div>
   </div>
 
   <div class="col-sm-6">
-    <h3>Content Title</h3>
-  </div>
-  
-  <div class="col-sm-4">
-    <div class="row">
-      <div class="col-xs-12 story-head">
-        Story image or title
-      </div>
-      <div class="col-xs-12">
-        Story content
-      </div>
+    <div class="well">
+      <h3>Content Title</h3>
+      <p>
+        <%= lorem_ipsum(250) %>
+      </p>
     </div>
+  </div>
+</div>
+<div class="content-block row">
+  <div class="col-sm-4">
+    <div class="well">
+      <div class="row">
+        <div class="col-xs-12 story-head">
+          <h4>Story image or title</h4>
+        </div>
+        <div class="col-xs-12">
+          <p>
+            <%= lorem_ipsum(100) %>
+          </p>
+        </div>
+      </div>
+    </div> 
   </div>
 
   <div class="col-sm-4">
-    <div class="row">
-      <div class="col-xs-12 story-head">
-        Story image or title
+    <div class="well">
+      <div class="row">
+        <div class="col-xs-12 story-head">
+          <h4>Story image or title</h4>
+        </div>
+        <div class="col-xs-12">
+          <p>
+            <%= lorem_ipsum(100) %>
+          </p>
+        </div>
       </div>
-      <div class="col-xs-12">
-        Story content
-      </div>
-    </div>
+    </div> 
   </div>
 
   <div class="col-sm-4">
-    <div class="row">
-      <div class="col-xs-12 story-head">
-        Story image or title
+    <div class="well">
+      <div class="row">
+        <div class="col-xs-12 story-head">
+          <h4>Story image or title</h4>
+        </div>
+        <div class="col-xs-12">
+          <p>
+            <%= lorem_ipsum(100) %>
+          </p>
+        </div>
       </div>
-      <div class="col-xs-12">
-        Story content
-      </div>
-    </div>
+    </div> 
   </div>
+
 </div>
