--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -16,11 +16,10 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
 
 // Styles
 #sidebar-wrapper {
-  z-index: 10;
   position: absolute;
   left: 100px;
   width: 0;
-  height: inherit;
+  height: 100%;
   margin-left: -100px;
   overflow: hidden;
   background: $ter-clr-2-trans;
@@ -31,6 +30,7 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
 }
 
 #sidebar_ul {
+  height: 100%;
   position: absolute;
   width: 100px;
   top: 0;
@@ -45,13 +45,12 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
 
     a {
       display: block;
-      text-decoration: none;
-      color: white;
+      text-decoration: none; 
     }
 
     a:hover {
       text-decoration: none;
-      color: #fff;
+      color: rgb(240,240,240);
       background: rgba(255,255,255,0.2);
     }
 
@@ -73,12 +72,12 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
 
 // The div actually lives on application.html.erb
 #sidebar_button {
-  position: fixed;
-  top: 50%;
+  position: absolute;
+  top: 60%;
   left: 0;
-  width: 25px;
-  height: 50px;
-  line-height: 50px;
+  width: 20px;
+  height: 40px;
+  line-height: 40px;
   //margin-left: -25px;
   border-bottom-left-radius: 0px;
   border-top-left-radius: 0px;
@@ -91,15 +90,15 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
   transition: all 0.5s ;
   a {
     color: $pri-clr;
-    line-height: 50px;
+    line-height: 40px;
     i {
-      padding-left: 4px;
-      line-height: 50px;
+      padding-left: 2px;
+      line-height: 40px;
     }
   }
 }
 
-// Actions
+// Changes made when sidebar is shown
 #wrapper.show-sidebar {
   padding-left: 100px;
 }
