--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,17 +42,18 @@ h3 {
   margin: 10px inherit;
 }
 
-p, li {
+p, li, a {
   color: #222222;
 }
 
 // Template styling
 html, body {
+  display: block;
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 }
 
 body {
@@ -60,8 +61,21 @@ body {
   margin-bottom: 5%;
 }
 
+.banner-title {
+  position: relative;
+  margin: 1em;
+  //border: solid 2px;
+  min-height: 50px;
+  z-index: 2;
+}
+
+.banner-title h1, p {
+  text-align: center;
+  color: #333333;
+}
+
 #wrapper {
-  //height: 100%;
+  height: 100%;
   padding-left: 0;
   -webkit-transition: all 0.5s ;
   -moz-transition: all 0.5s ;
@@ -71,19 +85,12 @@ body {
 
 #page_body {
   width: 100%;
-  display: inline-block;
-  margin-left: 25px;
-  padding-right: 3em;
+  display: block;
+  padding-left: 35px;
   z-index: 1;
+  //overflow: hidden;
 }
 
-// Lives above the wrapper
-.banner-title {
-  margin: 1em;
-  border: solid 2px;
-  min-height: 50px;
-  z-index: 2;
-}
 
 .footer {
   position: fixed;
@@ -92,8 +99,6 @@ body {
   width: 100%;
   bottom: 0;
   left: 0;
-  //height: 5%;
-  //height: 30px;
   background-color: $quat-clr-trans;
   p {
     text-align: right;
@@ -115,7 +120,7 @@ body {
   }
 }
 
-// Shrink fonts on short screens
+// Shrink fonts on skinny screens
 @media ( max-width: 767px ) {
   body {
     font-size: 1.25em;
