--- a/app/views/pages/_banner_title.html.erb
+++ b/app/views/pages/_banner_title.html.erb
@@ -1,3 +1,8 @@
-
-<h1 class="dark text-center">LOCODI</h1>
-<p class="text-center">The tagline of the century</p>
+<div id="banner_title" class="banner-title row">
+  <div class="col-xs-12">
+    <h1><%= @banner_title || @page_title %></h1>
+    <% if @banner_tag %>
+      <p><%= @banner_tag %></p>
+    <% end %>
+  </div>
+</div>
