finish banner and background image handling, implement Rack::Deflater for compression

--- a/app/views/pages/support.html.erb
+++ b/app/views/pages/support.html.erb
@@ -1,5 +1,5 @@
 <div class="supersized">
-  <%= image_tag 'crouching_sand_cropped.jpg', class: "supersized-image" %>
+  <%= image_tag 'crouching_sand.jpg', class: "supersized-image" %>
 </div>
 
 <div class="content-block row donate-image-block">
