--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#history</h1>
-<p>Find me in app/views/pages/history.html.erb</p>
+<div class="banner-img-div">
+  <%= image_tag 'road_banner.jpg', class: "banner-img" %>
+</div>
