--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#work</h1>
-<p>Find me in app/views/pages/work.html.erb</p>
+<div class="banner-img-div">
+  <%= image_tag 'wheat_field_banner.jpeg', class: "banner-img" %>
+</div>
