--- a/app/views/pages/leaders.html.erb
+++ b/app/views/pages/leaders.html.erb
@@ -1,3 +1,105 @@
 <div class="banner-img-div">
   <%= image_tag 'mountains_banner.jpeg', class: "banner-img" %>
 </div>
+
+<div class="row content-block">
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= icon('user fa-5x') %>
+      </div>
+      <div class="row leader-title">
+        <h4>Leader Title</h4>
+      </div>
+      <div class="row leader-bio">
+        <%= lorem_ipsum(170) %>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= icon('user fa-5x') %>
+      </div>
+      <div class="row leader-title">
+        <h4>Leader Title</h4>
+      </div>
+      <div class="row leader-bio">
+        <%= lorem_ipsum(170) %>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= icon('user fa-5x') %>
+      </div>
+      <div class="row leader-title">
+        <h4>Leader Title</h4>
+      </div>
+      <div class="row leader-bio">
+        <%= lorem_ipsum(170) %>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= icon('user fa-5x') %>
+      </div>
+      <div class="row leader-title">
+        <h4>Leader Title</h4>
+      </div>
+      <div class="row leader-bio">
+        <%= lorem_ipsum(170) %>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= icon('user fa-5x') %>
+      </div>
+      <div class="row leader-title">
+        <h4>Leader Title</h4>
+      </div>
+      <div class="row leader-bio">
+        <%= lorem_ipsum(170) %>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= icon('user fa-5x') %>
+      </div>
+      <div class="row leader-title">
+        <h4>Leader Title</h4>
+      </div>
+      <div class="row leader-bio">
+        <%= lorem_ipsum(170) %>
+      </div>
+    </div>
+  </div>
+
+  <div class="<%= @col_width %>">
+    <div class="well leader-well">
+      <div class="row leader-photo">
+        <%= icon('user fa-5x') %>
+      </div>
+      <div class="row leader-title">
+        <h4>Leader Title</h4>
+      </div>
+      <div class="row leader-bio">
+        <%= lorem_ipsum(170) %>
+      </div>
+    </div>
+  </div>
+
+</div>
