--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 /*
  *= require_tree .
  *= require_self
+ *= require jquery-ui/slider
  */
 
 @import "bootstrap-sprockets";
@@ -88,13 +89,17 @@ body {
   display: block;
   padding-left: 35px;
   z-index: 1;
-  //overflow: hidden;
+}
+
+// Give me some space!
+.spacing {
+  margin: 2em;
 }
 
 
 .footer {
   position: fixed;
-  z-index: 3;
+  z-index: 10;
   padding: .75em inherit;
   width: 100%;
   bottom: 0;
@@ -111,6 +116,17 @@ body {
       }
     }
   }
+}
+
+// in-line image wrapping
+.img-left-wrapped {
+  float: left;
+  margin: 10px;
+}
+
+.img-right-wrapped {
+  float: right;
+  margin: 10px;
 }
 
 // Hide the "created by" section of the footer on skinny screens
