--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -1,3 +1,77 @@
 <div class="banner-img-div">
   <%= image_tag 'road_banner.jpg', class: "banner-img" %>
 </div>
+
+
+<div class="row content-block history-block spacing" >
+  <div class="col-sm-3">
+    <%= image_tag placeholder_image(200) %>
+  </div>
+  <div class="col-sm-9 history-narrative" >
+    <h4 id="beginnings">This is just the beginning</h4>
+    <p><%= lorem_ipsum (500) %></p>
+  </div>
+</div>
+
+<div class="row content-block history-block spacing" >
+  <div class="col-sm-3">
+    <%= image_tag placeholder_image(200) %>
+  </div>
+  <div class="col-sm-9 history-narrative" >
+    <h4 id="pt2">First Milestone</h4>
+    <p><%= lorem_ipsum (500) %></p>
+  </div>
+</div>
+
+<div class="row content-block history-block spacing" >
+  <div class="col-sm-3">
+    <%= image_tag placeholder_image(200) %>
+  </div>
+  <div class="col-sm-9 history-narrative" >
+    <h4 id="pt3">Nice Achievement</h4>
+    <p><%= lorem_ipsum (500) %></p>
+  </div>
+</div>
+
+<div class="row content-block history-block spacing">
+  <div class="col-sm-3">
+    <%= image_tag placeholder_image(200) %>
+  </div>
+  <div class="col-sm-9 history-narrative" >
+    <h4 id="pt4">Sad event</h4>
+    <p><%= lorem_ipsum (500) %></p>
+  </div>
+</div>
+
+<div class="row content-block history-block spacing" >
+  <div class="col-sm-3">
+    <%= image_tag placeholder_image(200) %>
+  </div>
+  <div class="col-sm-9 history-narrative" >
+    <h4 id="pt5">Strong Victory</h4>
+    <p><%= lorem_ipsum (500) %></p>
+  </div>
+</div>
+
+<div class="row content-block history-block spacing" >
+  <div class="col-sm-3">
+    <%= image_tag placeholder_image(200) %>
+  </div>
+  <div class="col-sm-9 history-narrative" >
+    <h4 id="pt6">Big Thing</h4>
+    <p><%= lorem_ipsum (500) %></p>
+  </div>
+</div>
+
+<div class="row content-block history-block spacing" >
+  <div class="col-sm-3">
+    <%= image_tag placeholder_image(200) %>
+  </div>
+  <div class="col-sm-9 history-narrative" >
+    <h4 id="today">Here's where we are today</h4>
+    <p><%= lorem_ipsum (500) %></p>
+  </div>
+</div>
+
+<div id="history_nav_spacer"></div>
+
