finish history nav and slider ux

--- a/app/views/pages/_history_nav.html.erb
+++ b/app/views/pages/_history_nav.html.erb
@@ -1,25 +1,25 @@
 <div class="row slider-div">
   <ul class="nav nav-tabs">
     <li role="presentation" class="slider-label active">
-      <%= link_to "Beginnings", "#beginnings", class: "slider-btn" %>
+      <%= link_to "Beginnings", "#1", class: "slider-btn", id: '1_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "First Milestone", "#pt2", class: "slider-btn" %>
+      <%= link_to "First Milestone", "#2", class: "slider-btn", id: '2_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Nice Achievement", "#pt3", class: "slider-btn" %>
+      <%= link_to "Nice Achievement", "#3", class: "slider-btn", id: '3_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Sad Event", "#pt4", class: "slider-btn" %>
+      <%= link_to "Sad Event", "#4", class: "slider-btn", id: '4_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Strong Victory", "#pt5", class: "slider-btn" %>
+      <%= link_to "Strong Victory", "#5", class: "slider-btn", id: '5_btn' %>
     </li>
     <li role="presentation" class="slider-label">
-      <%= link_to "Big Thing", "#pt6", class: "slider-btn" %>
+      <%= link_to "Big Thing", "#6", class: "slider-btn", id: '6_btn' %>
     </li>
     <li class="slider-label">
-      <%= link_to "Today", "#today", class: "slider-btn" %>
+      <%= link_to "Today", "#7", class: "slider-btn", id: '7_btn' %>
     </li>
   </ul>
   <div id="slider"></div>
