--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -2,13 +2,14 @@
   <%= image_tag 'road_banner.jpg', class: "banner-img" %>
 </div>
 
+<h3><%= @div_nav_pos %></h3>
 
 <div class="row content-block history-block spacing" >
   <div class="col-sm-3">
     <%= image_tag placeholder_image(200) %>
   </div>
   <div class="col-sm-9 history-narrative" >
-    <h4 id="beginnings">This is just the beginning</h4>
+    <h4 id="1">This is just the beginning</h4>
     <p><%= lorem_ipsum (500) %></p>
   </div>
 </div>
@@ -18,7 +19,7 @@
     <%= image_tag placeholder_image(200) %>
   </div>
   <div class="col-sm-9 history-narrative" >
-    <h4 id="pt2">First Milestone</h4>
+    <h4 id="2">First Milestone</h4>
     <p><%= lorem_ipsum (500) %></p>
   </div>
 </div>
@@ -28,7 +29,7 @@
     <%= image_tag placeholder_image(200) %>
   </div>
   <div class="col-sm-9 history-narrative" >
-    <h4 id="pt3">Nice Achievement</h4>
+    <h4 id="3">Nice Achievement</h4>
     <p><%= lorem_ipsum (500) %></p>
   </div>
 </div>
@@ -38,7 +39,7 @@
     <%= image_tag placeholder_image(200) %>
   </div>
   <div class="col-sm-9 history-narrative" >
-    <h4 id="pt4">Sad event</h4>
+    <h4 id="4">Sad event</h4>
     <p><%= lorem_ipsum (500) %></p>
   </div>
 </div>
@@ -48,7 +49,7 @@
     <%= image_tag placeholder_image(200) %>
   </div>
   <div class="col-sm-9 history-narrative" >
-    <h4 id="pt5">Strong Victory</h4>
+    <h4 id="5">Strong Victory</h4>
     <p><%= lorem_ipsum (500) %></p>
   </div>
 </div>
@@ -58,7 +59,7 @@
     <%= image_tag placeholder_image(200) %>
   </div>
   <div class="col-sm-9 history-narrative" >
-    <h4 id="pt6">Big Thing</h4>
+    <h4 id="6">Big Thing</h4>
     <p><%= lorem_ipsum (500) %></p>
   </div>
 </div>
@@ -68,7 +69,7 @@
     <%= image_tag placeholder_image(200) %>
   </div>
   <div class="col-sm-9 history-narrative" >
-    <h4 id="today">Here's where we are today</h4>
+    <h4 id="7">Here's where we are today</h4>
     <p><%= lorem_ipsum (500) %></p>
   </div>
 </div>
