--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -37,6 +37,7 @@ $quat-clr-trans: rgba(32,56,111,.65); //dk blue
   margin: 0;
   padding: 0;
   list-style: none;
+  z-index: 6;
 
   li {
     display: block;
