--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -1,76 +1,88 @@
-<div class="banner-img-div">
-  <%= image_tag 'road_banner.jpg', class: "banner-img" %>
+<div class="supersized">
+  <%= image_tag 'road_banner.jpg', class: "supersized-img" %>
 </div>
 
-<h3><%= @div_nav_pos %></h3>
-
-<div class="row content-block history-block spacing" >
-  <div class="col-sm-3">
-    <%= image_tag placeholder_image(200) %>
-  </div>
-  <div class="col-sm-9 history-narrative" >
-    <h4 id="1">This is just the beginning</h4>
-    <p><%= lorem_ipsum (500) %></p>
-  </div>
-</div>
-
-<div class="row content-block history-block spacing" >
-  <div class="col-sm-3">
-    <%= image_tag placeholder_image(200) %>
-  </div>
-  <div class="col-sm-9 history-narrative" >
-    <h4 id="2">First Milestone</h4>
-    <p><%= lorem_ipsum (500) %></p>
+<div class="content-block history-block" >
+  <div class="well row">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200) %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4 id="1">This is just the beginning</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
   </div>
 </div>
 
-<div class="row content-block history-block spacing" >
-  <div class="col-sm-3">
-    <%= image_tag placeholder_image(200) %>
-  </div>
-  <div class="col-sm-9 history-narrative" >
-    <h4 id="3">Nice Achievement</h4>
-    <p><%= lorem_ipsum (500) %></p>
-  </div>
-</div>
-
-<div class="row content-block history-block spacing">
-  <div class="col-sm-3">
-    <%= image_tag placeholder_image(200) %>
-  </div>
-  <div class="col-sm-9 history-narrative" >
-    <h4 id="4">Sad event</h4>
-    <p><%= lorem_ipsum (500) %></p>
+<div class="content-block history-block" >
+  <div class="well row">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200) %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4 id="2">First Milestone</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
   </div>
 </div>
 
-<div class="row content-block history-block spacing" >
-  <div class="col-sm-3">
-    <%= image_tag placeholder_image(200) %>
-  </div>
-  <div class="col-sm-9 history-narrative" >
-    <h4 id="5">Strong Victory</h4>
-    <p><%= lorem_ipsum (500) %></p>
-  </div>
-</div>
-
-<div class="row content-block history-block spacing" >
-  <div class="col-sm-3">
-    <%= image_tag placeholder_image(200) %>
-  </div>
-  <div class="col-sm-9 history-narrative" >
-    <h4 id="6">Big Thing</h4>
-    <p><%= lorem_ipsum (500) %></p>
+<div class="content-block history-block" >
+  <div class="well row">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200) %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4 id="3">Nice Achievement</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
   </div>
 </div>
 
-<div class="row content-block history-block spacing" >
-  <div class="col-sm-3">
-    <%= image_tag placeholder_image(200) %>
+<div class="content-block history-block" >
+  <div class="well row">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200) %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4 id="4">Sad event</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
   </div>
-  <div class="col-sm-9 history-narrative" >
-    <h4 id="7">Here's where we are today</h4>
-    <p><%= lorem_ipsum (500) %></p>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200) %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4 id="5">Strong Victory</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200) %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4 id="6">Big Thing</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200) %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4 id="7">Here's where we are today</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
   </div>
 </div>
 
