--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,7 +54,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  //overflow-x: hidden;
+  overflow: hidden;
 }
 
 body {
@@ -86,9 +86,11 @@ body {
 
 #page_body {
   width: 100%;
+  height: 100%;
   display: block;
   padding-left: 35px;
   z-index: 1;
+  overflow-y: scroll; 
 }
 
 // Give me some space!
