--- a/app/assets/stylesheets/history_nav.css.scss
+++ b/app/assets/stylesheets/history_nav.css.scss
@@ -1,6 +1,7 @@
 // Styling for History_nav partial that appears inside wrapper on history page.
 $pri-clr: rgba(248,237,217,1); //beige
 $pri-clr-trans: rgba(248,237,217,.5); //beige
+$sec-clr: rgba(136,164,210,1); //lt blue
 
 #history_div {
   position: fixed;
@@ -17,7 +18,7 @@ $pri-clr-trans: rgba(248,237,217,.5); //beige
   //border: solid 2px black;
   margin-left: auto;
   margin-right: auto;
-  width: 95%;
+  width: 100%;
   height: 25px;
   z-index: 4;
   background: -moz-linear-gradient(top, rgba(248,237,217,0) 0%, rgba(248,237,217,1) 100%); /* FF3.6+ */
@@ -49,6 +50,12 @@ $pri-clr-trans: rgba(248,237,217,.5); //beige
   }
 }
 
+.active {
+  .slider-btn {
+    //background-color: $sec-clr !important;
+  }
+}
+
 #slider {
   width: 85%;
   margin-top: 8px;
@@ -63,5 +70,5 @@ $pri-clr-trans: rgba(248,237,217,.5); //beige
 }
 
 #history_nav_spacer {
-  height: 100px;
+  height: 400px;
 }
