--- a/app/views/pages/history.html.erb
+++ b/app/views/pages/history.html.erb
@@ -1,11 +1,11 @@
 <div class="supersized">
-  <%= image_tag 'road_banner.jpg', class: "supersized-img" %>
+  <%= image_tag 'road_hills.jpg', class: "supersized-image" %>
 </div>
 
 <div class="content-block history-block" >
   <div class="well row">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200) %>
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4 id="1">This is just the beginning</h4>
@@ -17,7 +17,7 @@
 <div class="content-block history-block" >
   <div class="well row">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200) %>
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4 id="2">First Milestone</h4>
@@ -29,7 +29,7 @@
 <div class="content-block history-block" >
   <div class="well row">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200) %>
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4 id="3">Nice Achievement</h4>
@@ -41,7 +41,7 @@
 <div class="content-block history-block" >
   <div class="well row">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200) %>
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4 id="4">Sad event</h4>
@@ -53,7 +53,7 @@
 <div class="content-block history-block" >
   <div class="well row">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200) %>
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4 id="5">Strong Victory</h4>
@@ -65,7 +65,7 @@
 <div class="content-block history-block" >
   <div class="well row">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200) %>
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4 id="6">Big Thing</h4>
@@ -77,7 +77,7 @@
 <div class="content-block history-block" >
   <div class="well row">
     <div class="col-sm-3">
-      <%= image_tag placeholder_image(200) %>
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
     </div>
     <div class="col-sm-9 history-narrative" >
       <h4 id="7">Here's where we are today</h4>
