remove history page, redesign work page

--- a/app/views/pages/_sidebar.html.erb
+++ b/app/views/pages/_sidebar.html.erb
@@ -10,14 +10,14 @@
     <li id="work" >
       <%= link_to icon('fire') + " Work", work_path  %>
     </li>
-    <li id="leaders" class="sub-menu">
+    <li id="leaders">
       <%= link_to icon('gavel') + " Board", leaders_path %>
-    </li>
-    <li id="history" >
-      <%= link_to icon('history') + " History", history_path %>
     </li>
     <li id="support" >
       <%= link_to icon('group') + " Support", support_path %>
+    </li>
+    <li id="join" >
+      <%= link_to icon('plane') + " Join Us", join_path %>
     </li>
     <li id="calendar">
       <%= link_to icon('calendar') + " Events", calendar_path %>
