--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,50 +21,7 @@
     </div>
   </div>
 </div>
+
 <div class="content-block row">
-  <div class="col-sm-4">
-    <div class="well">
-      <div class="row">
-        <div class="col-xs-12 story-head">
-          <h4>Story image or title</h4>
-        </div>
-        <div class="col-xs-12">
-          <p>
-            <%= lorem_ipsum(100) %>
-          </p>
-        </div>
-      </div>
-    </div> 
-  </div>
-
-  <div class="col-sm-4">
-    <div class="well">
-      <div class="row">
-        <div class="col-xs-12 story-head">
-          <h4>Story image or title</h4>
-        </div>
-        <div class="col-xs-12">
-          <p>
-            <%= lorem_ipsum(100) %>
-          </p>
-        </div>
-      </div>
-    </div> 
-  </div>
-
-  <div class="col-sm-4">
-    <div class="well">
-      <div class="row">
-        <div class="col-xs-12 story-head">
-          <h4>Story image or title</h4>
-        </div>
-        <div class="col-xs-12">
-          <p>
-            <%= lorem_ipsum(100) %>
-          </p>
-        </div>
-      </div>
-    </div> 
-  </div>
-
+  <h4><%= #@blog_1_title %></h4>
 </div>
