--- a/app/views/pages/work.html.erb
+++ b/app/views/pages/work.html.erb
@@ -1,22 +1,89 @@
-<div class="banner-img-div">
-  <%= image_tag 'wheat_field_banner.jpeg', class: "banner-img" %>
+<div class="supersized">
+  <%= image_tag 'road_hills.jpg', class: "supersized-image" %>
 </div>
 
-
-<div class="row content-block spacing">
-  <div class="col-xs-12 col-md-3">
-    <%= image_tag placeholder_image(200) %>
-    <p>Chart explanation</p>
+<div class="content-block history-block" >
+  <div class="well row" id="1">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4>Kingdom Life</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
   </div>
-
-  <div class="col-xs-12 col-md-5">
-    <h4>We work pretty hard</h4>
-    <p><%= lorem_ipsum(800).html_safe %></p>
-  </div>
-
-  <div class="col-xs-12 col-md-4">
-    <%= image_tag placeholder_image(300) %>
-    <p>Map explanation</p>
-  </div>
-    
 </div>
+
+<div class="content-block history-block" >
+  <div class="well row" id="2">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4>Purity Clubs</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row" id="3">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4>Project #3</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row" id="4">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4>Project #4</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row" id="5">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4>Project #5</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row" id="6">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4>Project #6</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div class="content-block history-block" >
+  <div class="well row" id="7">
+    <div class="col-sm-3">
+      <%= image_tag placeholder_image(200), class: 'history-img' %>
+    </div>
+    <div class="col-sm-9 history-narrative" >
+      <h4>Project #7</h4>
+      <p><%= lorem_ipsum (500) %></p>
+    </div>
+  </div>
+</div>
+
+<div id="history_nav_spacer"></div>
