--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,11 @@
 
     </div>
 
-    <% if @page_finder == "history" %>
+    <% if @page_finder == "work" %>
       <div id="history_div" class="container-fluid">
         <div id="history_fade" class="row"></div>
         <div id="history_nav">
-          <%= render 'history_nav' %>
+          <%= render 'work_nav' %>
         </div>
       </div>
     <% end %>
