--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,5 +23,7 @@
 </div>
 
 <div class="content-block row">
-  <h4><%= #@blog_1_title %></h4>
+  <div class="well">
+    <h4>Blog stuff!</h4>
+  </div>
 </div>
